Fixed: Light toggle to default to true

--- a/public/credits/index.html
+++ b/public/credits/index.html
@@ -282,12 +282,6 @@ Core Technologies HugoThe world’s fastest framework for building websites Hext
   </div>
 
       <footer class="hextra-footer hx-bg-gray-100 hx-pb-[env(safe-area-inset-bottom)] dark:hx-bg-neutral-900 print:hx-bg-transparent">
-    
-
-
-  
-
-
   
   <div class="hx-text-center hx-max-w-screen-xl hx-pl-[max(env(safe-area-inset-left),1.5rem)] hx-pr-[max(env(safe-area-inset-right),1.5rem)] hx-text-gray-600 dark:hx-text-gray-400">
     <p>
@@ -295,7 +289,7 @@ Core Technologies HugoThe world’s fastest framework for building websites Hext
       <b>Hassaan Anwar</b><br>
       <b>
         <u><a href="/">Home</a></u> -
-        <u><a href="/about-me">About</a></u> -
+        <u><a href="/about-me">About Me</a></u> -
         <u><a href="/contact">Contact</a></u> -
         <u><a href="/credits">Credits</a></u>
       </b>
