--- a/public/index.html
+++ b/public/index.html
@@ -267,12 +267,6 @@ Take a look around and when you want to know more about my background, head over
   </div>
 
       <footer class="hextra-footer hx-bg-gray-100 hx-pb-[env(safe-area-inset-bottom)] dark:hx-bg-neutral-900 print:hx-bg-transparent">
-    
-
-
-  
-
-
   
   <div class="hx-text-center hx-max-w-screen-xl hx-pl-[max(env(safe-area-inset-left),1.5rem)] hx-pr-[max(env(safe-area-inset-right),1.5rem)] hx-text-gray-600 dark:hx-text-gray-400">
     <p>
@@ -280,7 +274,7 @@ Take a look around and when you want to know more about my background, head over
       <b>Hassaan Anwar</b><br>
       <b>
         <u><a href="/">Home</a></u> -
-        <u><a href="/about-me">About</a></u> -
+        <u><a href="/about-me">About Me</a></u> -
         <u><a href="/contact">Contact</a></u> -
         <u><a href="/credits">Credits</a></u>
       </b>
