--- a/public/about-me/index.html
+++ b/public/about-me/index.html
@@ -420,12 +420,6 @@ FAST-NUCES, Pakistan <em>(08/2022 – 06/2026)</em></p>
   </div>
 
       <footer class="hextra-footer hx-bg-gray-100 hx-pb-[env(safe-area-inset-bottom)] dark:hx-bg-neutral-900 print:hx-bg-transparent">
-    
-
-
-  
-
-
   
   <div class="hx-text-center hx-max-w-screen-xl hx-pl-[max(env(safe-area-inset-left),1.5rem)] hx-pr-[max(env(safe-area-inset-right),1.5rem)] hx-text-gray-600 dark:hx-text-gray-400">
     <p>
@@ -433,7 +427,7 @@ FAST-NUCES, Pakistan <em>(08/2022 – 06/2026)</em></p>
       <b>Hassaan Anwar</b><br>
       <b>
         <u><a href="/">Home</a></u> -
-        <u><a href="/about-me">About</a></u> -
+        <u><a href="/about-me">About Me</a></u> -
         <u><a href="/contact">Contact</a></u> -
         <u><a href="/credits">Credits</a></u>
       </b>
