--- a/public/contact/index.html
+++ b/public/contact/index.html
@@ -262,12 +262,6 @@ LinkedInConnect with me professionally EmailSend me an email DiscordMessage me o
   </div>
 
       <footer class="hextra-footer hx-bg-gray-100 hx-pb-[env(safe-area-inset-bottom)] dark:hx-bg-neutral-900 print:hx-bg-transparent">
-    
-
-
-  
-
-
   
   <div class="hx-text-center hx-max-w-screen-xl hx-pl-[max(env(safe-area-inset-left),1.5rem)] hx-pr-[max(env(safe-area-inset-right),1.5rem)] hx-text-gray-600 dark:hx-text-gray-400">
     <p>
@@ -275,7 +269,7 @@ LinkedInConnect with me professionally EmailSend me an email DiscordMessage me o
       <b>Hassaan Anwar</b><br>
       <b>
         <u><a href="/">Home</a></u> -
-        <u><a href="/about-me">About</a></u> -
+        <u><a href="/about-me">About Me</a></u> -
         <u><a href="/contact">Contact</a></u> -
         <u><a href="/credits">Credits</a></u>
       </b>
