Fixed: Footer alignment

--- a/public/index.html
+++ b/public/index.html
@@ -268,7 +268,7 @@ Take a look around and when you want to know more about my background, head over
 
       <footer class="hextra-footer hx-bg-gray-100 hx-pb-[env(safe-area-inset-bottom)] dark:hx-bg-neutral-900 print:hx-bg-transparent">
   
-  <div class="hx-text-center hx-max-w-screen-xl hx-pl-[max(env(safe-area-inset-left),1.5rem)] hx-pr-[max(env(safe-area-inset-right),1.5rem)] hx-text-gray-600 dark:hx-text-gray-400">
+  <div class="hx-text-center hx-max-w-screen-xl hx-mx-auto hx-pl-[max(env(safe-area-inset-left),1.5rem)] hx-pr-[max(env(safe-area-inset-right),1.5rem)] hx-text-gray-600 dark:hx-text-gray-400">
     <p>
       <br>
       <b>Hassaan Anwar</b><br>
