Added: Discus comments

--- a/public/about-me/index.html
+++ b/public/about-me/index.html
@@ -92,7 +92,7 @@ I’m a technologist dedicated to transforming complex challenges into elegant s
             title="About Me"
             href="/about-me"
             
-            class="hx-text-sm contrast-more:hx-text-gray-700 contrast-more:dark:hx-text-gray-100 hx-relative -hx-ml-2 hx-hidden hx-whitespace-nowrap hx-p-2 md:hx-inline-block hx-font-medium"
+            class="hx-text-sm contrast-more:hx-text-gray-700 contrast-more:dark:hx-text-gray-100 hx-relative -hx-ml-2 hx-hidden hx-whitespace-nowrap hx-p-2 md:hx-inline-block hx-text-gray-600 hover:hx-text-gray-800 dark:hx-text-gray-400 dark:hover:hx-text-gray-200"
           >
             <span class="hx-text-center">About Me</span>
           </a><a
@@ -373,6 +373,8 @@ FAST-NUCES, Pakistan <em>(08/2022 – 06/2026)</em></p>
         </div>
         <div class="hx-mt-16"></div>
         
+  
+
       </main>
     </article>
   </div>
