--- a/public/contact/index.html
+++ b/public/contact/index.html
@@ -101,7 +101,7 @@ LinkedInConnect with me professionally EmailSend me an email DiscordMessage me o
             title="Contact"
             href="/contact"
             
-            class="hx-text-sm contrast-more:hx-text-gray-700 contrast-more:dark:hx-text-gray-100 hx-relative -hx-ml-2 hx-hidden hx-whitespace-nowrap hx-p-2 md:hx-inline-block hx-font-medium"
+            class="hx-text-sm contrast-more:hx-text-gray-700 contrast-more:dark:hx-text-gray-100 hx-relative -hx-ml-2 hx-hidden hx-whitespace-nowrap hx-p-2 md:hx-inline-block hx-text-gray-600 hover:hx-text-gray-800 dark:hx-text-gray-400 dark:hover:hx-text-gray-200"
           >
             <span class="hx-text-center">Contact</span>
           </a><div class="search-wrapper hx-relative md:hx-w-64">
@@ -268,6 +268,8 @@ LinkedInConnect with me professionally EmailSend me an email DiscordMessage me o
         </div>
         <div class="hx-mt-16"></div>
         
+  
+
       </main>
     </article>
   </div>
